[gd_scene load_steps=10 format=3 uid="uid://u40suamhbul"]

[ext_resource type="Texture2D" uid="uid://bw8f6yvyywrej" path="res://Art/black_background.png" id="1_d64p4"]
[ext_resource type="Script" path="res://Game Win/game_win_scene.gd" id="1_jc3do"]
[ext_resource type="FontFile" uid="uid://dwrratye5f3dm" path="res://Textbox/HelvetiPixel.ttf" id="2_js7p8"]
[ext_resource type="Texture2D" uid="uid://bpqe5q5ouywxe" path="res://Art/Key Items 16x16/00.png" id="4_qpu4h"]
[ext_resource type="Texture2D" uid="uid://dai428eml7yyr" path="res://Art/Key Items 16x16/01.png" id="5_q6m0l"]
[ext_resource type="Texture2D" uid="uid://bood6r216vh3q" path="res://Art/Key Items 16x16/02.png" id="6_6f8ya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cbe31"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbh1t"]
bg_color = Color(0.301961, 0.67451, 0.419608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxdku"]
bg_color = Color(0.494118, 0.933333, 0.623529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="GameWinScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jc3do")

[node name="BlackBackground" type="Sprite2D" parent="."]
position = Vector2(579, 173)
scale = Vector2(1.03429, 0.998667)
texture = ExtResource("1_d64p4")

[node name="You Win Label Background" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 57.0
offset_right = 1155.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0.301961, 0.67451, 0.419608, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 200
text = "YOU WIN!"
horizontal_alignment = 1

[node name="You Win Label" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 53.0
offset_right = 1160.0
offset_bottom = 228.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 200
text = "YOU WIN!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 386.0
offset_right = 763.0
offset_bottom = 570.0
theme_override_constants/separation = 20

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_cbe31")
theme_override_styles/hover = SubResource("StyleBoxFlat_hbh1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fxdku")
text = "Retry"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_cbe31")
theme_override_styles/hover = SubResource("StyleBoxFlat_hbh1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fxdku")
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_cbe31")
theme_override_styles/hover = SubResource("StyleBoxFlat_hbh1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fxdku")
text = "Quit Game"

[node name="Morse Code" type="Label" parent="."]
layout_mode = 0
offset_left = 991.0
offset_top = 13.0
offset_right = 1152.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 20
text = ".. - .----. ... / -.. .- -. --. . .-. --- ..- ... / - --- / --. --- / .- .-.. --- -. . --..-- / - .- -.- . / - .... .. ... -.-.--"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Morse Code2" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 190.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 20
text = "--- .... / -- -.-- / --. --- -.. --..-- / -.-- --- ..- / -.- .. .-.. .-.. . -.. / -.- . -. -. -.-- -.-.-- / -.-- --- ..- / -... .- ... - .- .-. -.. -.-.--"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Morse Code3" type="Label" parent="."]
layout_mode = 0
offset_left = 779.0
offset_top = 383.0
offset_right = 1135.0
offset_bottom = 611.0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 40
text = "... .... --- ..- - / --- ..- - / - --- / --- ..- .-. / .--. .-. --- ..-. . ... ... --- .-. .-.-.- / -.-- --- ..- / -.. .- / -... --- -- -... .-.-.- -.-. --- -- -.-.--"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Morse Code4" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 383.0
offset_right = 390.0
offset_bottom = 611.0
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 30
text = "-.-. .-. . .- - . -.. / -... -.-- / -.- .. -- -... . .-. .-.. -.-- / -- -.-. -. . .. .-.. --..-- / ... . .-. . -. .- / -- --- -. - . ..-. --- .-. - . --..-- / -. .. -.-. .... --- .-.. .- ... / -- .. -.-. .... .- . .-.. ... --..-- / -- .- - - / -- .- -.-. -.. --- -. .- .-.. -.. --..-- / .- -. -.. / -- .. -.-. .... .- . .-.. / .-- .- - -.- .. -. ..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="00" type="Sprite2D" parent="."]
position = Vector2(220, 66)
scale = Vector2(3.0625, 3.3125)
texture = ExtResource("4_qpu4h")

[node name="01" type="Sprite2D" parent="."]
position = Vector2(85, 163)
scale = Vector2(2.625, 2.625)
texture = ExtResource("5_q6m0l")

[node name="02" type="Sprite2D" parent="."]
position = Vector2(223, 231)
scale = Vector2(2.9375, 2.9375)
texture = ExtResource("6_6f8ya")

[node name="03" type="Sprite2D" parent="."]
position = Vector2(1038, 337)
scale = Vector2(2.9375, 2.9375)
texture = ExtResource("6_6f8ya")

[node name="04" type="Sprite2D" parent="."]
position = Vector2(926, 257)
scale = Vector2(3.0625, 3.3125)
texture = ExtResource("4_qpu4h")

[node name="05" type="Sprite2D" parent="."]
position = Vector2(1046, 176)
scale = Vector2(2.625, 2.625)
texture = ExtResource("5_q6m0l")

[node name="06" type="Sprite2D" parent="."]
position = Vector2(954, 66)
scale = Vector2(2.9375, 2.9375)
texture = ExtResource("6_6f8ya")

[node name="07" type="Sprite2D" parent="."]
position = Vector2(112, 336)
scale = Vector2(3.0625, 3.3125)
texture = ExtResource("4_qpu4h")

[node name="Your Time Label" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 198.0
offset_right = 1160.0
offset_bottom = 287.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 100
text = "Your Time:"
horizontal_alignment = 1

[node name="Your Time Numbers Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 281.0
offset_right = 1160.0
offset_bottom = 370.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_js7p8")
theme_override_font_sizes/font_size = 100
text = "00:00:00"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
